# Snake

./: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md  Snake.cpp  Snake.h  main.cpp  main.h  score.txt
include/: Collision.hpp  Entety.hpp  Food.hpp  Game.hpp  Menue.hpp  Settings.hpp  Snake.hpp  state.hpp
src/: Collision.cpp  Entety.cpp  Food.cpp  Game.cpp  Menue.cpp  Settings.cpp  Snake.cpp  State.cpp
